--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vk-test",
   "version": "0.1.0",
+  "homepage": "https://jatesatis.github.io/negotiation-form",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -13,6 +14,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
